2011-02-03  John W. Eaton  <jwe@octave.org>

	* cmd-hist.cc (gnu_history::do_process_histcontrol):
	Rename from command_history::do_process_histcontrol.
	(gnu_history::do_histcontrol): Rename from
	command_history::do_histcontrol.
	* cmd-hist.h (command_history::do_histcontrol): Provide dummy version.
	* cmd-hist.cc (command_history::do_process_histcontrol): Likewise.
	Bug #32325.

2011-02-02  John W. Eaton  <jwe@octave.org>

	* Range.cc (Range::Range (double, double, octave_idx_type)):
	Correctly compute limit from base, increment and number of
	elements.  Bug #32321.

2011-01-31  John W. Eaton  <jwe@octave.org>

	* Sparse.cc (Sparse<T>::assign (const idx_vector&, const idx_vector&,
	const Sparse<T>&)): Handle case of LHS originally empty, and
	with non-colon indices.  Fix typo in previous change.  Bug #32263.

2011-01-30  Pascal Dupuis  <Pascal.Dupuis@worldonline.be>

	* lo-sysdep.cc (opendir): On error, free allocated DIR object
	before returning.

2011-01-28  John W. Eaton  <jwe@octave.org>

	* eigs-base.cc: Remove #endif corresponding to "#ifdef HAVE_ARPACK",
	not the one that matched "#if !defined (CXX_NEW_FRIEND_TEMPLATE_DECL)".

2011-01-28  John W. Eaton  <jwe@octave.org>

	* eigs-base.cc (EigsRealNonSymmetricFunc,
	EigsRealNonSymmetricMatrix, EigsRealNonSymmetricMatrixShift):
	Initialize eig_vec2 to 0 before calling dneupd.

2011-01-28  John W. Eaton  <jwe@octave.org>

	* eigs-base.cc: Assume we have ARPACK.

2011-01-27  John W. Eaton  <jwe@octave.org>

	* Sparse.cc (Sparse<T>::assign (const idx_vector&, const idx_vector&,
	const Sparse<T>&)): Allow 0x0 LHS with colon dimensions to
	inherit dimensions from RHS.  Fix tests.  Bug #32263.

2011-01-26  John W. Eaton  <jwe@octave.org>

	* oct-refcount.h: Strip trailing whitespace.

2011-01-24  Pascal Dupuis  <Pascal.Dupuis@worldonline.be>

	* SparseQR.h (class SparseQR::SparseQR_reps): Disallow copying.
	* Array.cc (class rec_permute_helper, class rec_index_helper,
	class  rec_resize_helper): Likewise.